<resources>
    <string name="app_name">中云付-短运端</string>
    <string name="title_home">主页</string>
    <string name="title_mine">我的</string>
    <string name="title_activity_login">登录</string>

    <string name="title_member">会员中心</string>

    <string name="title_order_list">账单列表</string>

    <string name="toast_back_again">再点击返回键退出</string>

    <!-- Strings related to login -->
    <string name="prompt_username">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="error_invalid_account">请输入正确的账号</string>
    <string name="error_invalid_phone">请输入正确的手机号</string>
    <string name="error_invalid_password">密码须大于等于6位</string>
    <string name="error_incorrect_password">密码错误，请重新输入</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="text_hint_phone">请输入您的手机号</string>
    <string name="text_send_code">获取验证码</string>
    <string name="text_hint_code2">请输入短信验证码</string>
    <string name="action_sign_in_short">@string/action_sign_in</string>
    <string name="text_hint_code">验证码</string>
    <string name="text_register">注册</string>
    <string name="has_account">已有账号</string>
    <string name="btn_resend_count">%1$s s后重新获取</string>
    <string name="toast_input_phone">请正确输入手机号</string>
    <string name="text_error_mobile_valid">请输入正确的手机号</string>
    <string name="text_error_sms_code_valid">请输入正确的验证码</string>

    <string name="text_unfinished">未完成</string>
    <string name="text_finished">已完成</string>

    <string name="text_take">上门取货</string>
    <string name="text_delivery">送货上门</string>

    <string name="action_home">首页</string>
    <string name="action_mine">我的</string>

    <string name="text_order_list">订单列表</string>

    <string name="text_confirm">确认</string>
    <string name="text_recover">恢复</string>

    <string name="text_scan_input">扫码取货</string>

    <string name="text_e_payment">电子支付</string>
    <string name="text_pay_on_delivery">货到付款</string>
    <string name="text_weixin_pay">微信支付</string>
    <string name="text_alipay_pay">支付宝支付</string>
    <string name="text_bankcard_pay">银行卡支付</string>
    <string name="text_pingan_pay">平安支付</string>

    <string name="text_my_address">我的地址</string>
    <string name="text_coupon">优惠券</string>
    <string name="text_e_invoice">电子发票</string>
    <string name="text_my_message">我的消息</string>
    <string name="text_my_custom_service">我的客服</string>
    <string name="text_setting">设置</string>

    <string name="text_user_info">个人信息</string>
    <string name="text_my_achievement">我的业绩</string>
    <string name="text_order_management">订单管理</string>

    <string name="text_change_account">切换帐号</string>

    <string name="text_message">消息</string>

    <string name="text_photo">拍照</string>
    <string name="text_choose_photo">从手机相册选择</string>
    <string name="text_cancel">取消</string>
    
    <string name="text_search_hint">请输入查询的运单号</string>
    <string name="text_search">查询</string>
    <string name="text_recognition_car_num">扫描或手动输入</string>

    <string name="text_message_center">消息中心</string>

    <string name="text_clear_cache">清除缓存</string>
    <string name="text_version_code">版本号</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_check_update">检查更新</string>

    <string name="text_account_settings">帐号设置</string>

    <string name="text_change_nickname">修改昵称</string>
    <string name="text_hint_nickname">输入昵称</string>

    <string name="text_avatar">头像</string>
    <string name="text_nickname">昵称</string>
    <string name="text_username">姓名</string>
    <string name="text_hiretime">入职时间</string>
    <string name="text_logintime">登录时间</string>
    <string name="text_company">所属公司</string>

    <string name="text_checkall">全选</string>
    <string name="btn_sum">去结算</string>

    <string name="text_scan_pay">扫码支付</string>
    <string name="text_validate_finish">验收完毕</string>

    <string name="text_create_order">创建订单</string>
    <string name="text_giveup_pay">放弃支付</string>
    <string name="text_confirm_del">确认删除</string>

    <string name="text_hangye_route">线路查询</string>
    <string name="text_hangye_company">企业查询</string>
    <string name="text_hangye_special">专线查询</string>

    <string name="activity_devicelist_title_paired_devices">已配对设备</string>
    <string name="activity_devicelist_title_other_devices">其它设备</string>
    <string name="activity_devicelist_button_scan">扫描蓝牙</string>
    <string name="activity_devicelist_get_device_err">获取设备失败:</string>
    <string name="activity_devicelist_none_paired">未配对设备</string>
    <string name="activity_devicelist_scanning">扫描中......</string>
    <string name="activity_devicelist_select_device">设备列表</string>
    <string name="activity_main_scan_error">扫描失败！</string>
    <string name="activity_main_connected">连接成功！</string>

    <string name="text_input_vehicle_num">请输入车牌号</string>
    <string name="text_welcome">你好，%1$s</string>
    <string name="text_error_upload_image">上传图片失败</string>

    <string name="text_meter">%1$s米</string>
    <string name="text_kilometer">%1$s千米</string>
    <string name="text_duration">大约%1$s分钟</string>

    <string name="text_recover_order">您有一个未完成的订单，是否恢复？</string>

    <array name="array_photo">
        <item>@string/text_photo</item>
        <item>@string/text_choose_photo</item>
        <item>@string/text_cancel</item>
    </array>

    <string-array name="array_user">
        <item>@string/text_user_info</item>
        <item>@string/text_my_achievement</item>
        <item>@string/text_order_management</item>
    </string-array>

    <string-array name="array_userinfo">
        <item>@string/text_nickname</item>
        <item>@string/text_username</item>
        <item>@string/text_hiretime</item>
        <item>@string/text_logintime</item>
        <item>@string/text_company</item>
    </string-array>
</resources>
