<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_background"
            android:fillViewport="true"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <com.zyf.widget.SettingsItemView
            android:id="@+id/clearCacheBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:hasNextIcon="false"
            app:titleText="@string/text_clear_cache"
            />

        <com.zyf.widget.SettingsItemView
            android:id="@+id/versionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:hasNextIcon="false"
            app:titleText="@string/text_version_code"
            />

        <com.zyf.widget.SettingsItemView
            android:id="@+id/aboutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:titleText="@string/text_about_us"
            />

        <!--<com.lcparking.widget.SettingsItemView-->
            <!--android:id="@+id/shareBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="12dp"-->
            <!--app:titleText="@string/text_share"-->
            <!--/>-->

        <!--<com.lcparking.widget.SettingsItemView-->
            <!--android:id="@+id/nearbyStoresBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:titleText="@string/text_nearby_stores"-->
            <!--/>-->


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/btn_selector"
            android:text="退出"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>
</ScrollView>