<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.zyf.ui.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:layout_below="@+id/iv_logo"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/app_name"/>

            <android.support.v7.widget.CardView
                android:id="@+id/layout_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white"
                android:elevation="0dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="20dp"
                app:contentPadding="2dp"
                android:layout_below="@+id/tv_appname">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/account_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/pwd_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.AppCompat.EditText"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/layout_input"-->
                <!--android:layout_marginTop="-22dp"-->
                <!--app:cardElevation="10dp"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:background="@color/color_transparent">-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/layout_input"
                android:layout_marginTop="22dp"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="130dp"
                    android:layout_height="44dp"
                    android:layout_marginRight="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/action_sign_up"
                    android:background="@mipmap/btn_bg"/>

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="130dp"
                    android:layout_height="44dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/action_sign_in"
                    android:background="@mipmap/btn_bg"/>

            </LinearLayout>

            <!--</android.support.v7.widget.CardView>-->

        </RelativeLayout>

    </ScrollView>
</LinearLayout>
